lychee mobile view

--- a/index.html
+++ b/index.html
@@ -20,11 +20,26 @@
         </p>
         <p id="fruits" class="split">FRUITS</p>
       </div>
+      <p id="to_lychee">Firstly,<br />we have</p>
     </section>
 
-    <!-- <section id="first">
-        <h2>fruit1</h2>
-    </section> -->
+    <section id="lychee">
+      <h2 id="lychee_name" class="split">LYCHEE</h2>
+      <div id="lychee_content">
+        <img
+          src="images/lychee-4390099_1920.jpg"
+          alt="lychees"
+          id="lychee_image"
+        />
+        <h3 id="lychee_title" class="split">LYCHEE</h3>
+        <p id="lychee_des" class="split">
+          Lychee is like nature’s candy wrapped in a bumpy red shell! Crack it
+          open, and you’ll find a juicy, translucent treasure that tastes like a
+          magical mix of roses and tropical sunshine. Perfect for a sweet snack
+          or a refreshing addition to your favorite drinks and desserts!
+        </p>
+      </div>
+    </section>
 
     <script src="https://unpkg.co/gsap@3/dist/gsap.min.js"></script>
     <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
