--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <meta
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+    <meta
       name="viewport"
       content="user-scalable=no, width=device-width, initial-scale=1.0"
-    /> -->
+    />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <title>Fruits</title>
     <link rel="stylesheet" href="css/html5reset.css" />
