--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
     <meta
       name="viewport"
-      content="user-scalable=no, width=device-width, initial-scale=1.0"
+      content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1"
     />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <title>Fruits</title>
