--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
         <p id="lychee_des" class="split">
           Lychee is like nature’s candy wrapped in a bumpy red shell! Crack it
           open, and you’ll find a juicy, translucent treasure that tastes like a
-          magical mix of roses and tropical sunshine. Perfect for a sweet snack
-          or a refreshing addition to your favorite drinks and desserts!
+          magical mix of roses and tropical sunshine.
         </p>
       </div>
     </section>
