fix split text accessibility and add papaya

--- a/index.html
+++ b/index.html
@@ -38,6 +38,25 @@
           magical mix of roses and tropical sunshine.
         </p>
       </div>
+      <p id="to_papaya">Next,<br />we have</p>
+    </section>
+
+    <section id="papaya">
+      <h2 id="papaya_name" class="split">PAPAYA</h2>
+      <div id="papaya_content">
+        <img
+          src="images/ilyuza-mingazova-G1rAFQ5pdz4-unsplash.jpg"
+          alt="papayas"
+          id="papaya_image"
+        />
+        <h3 id="papaya_title" class="split">PAPAYA</h3>
+        <p id="papaya_des" class="split">
+          The tropical sunshine! Loved for its vibrant orange color, creamy
+          texture, and naturally sweet flavor, papaya is a refreshing delight
+          packed with nutrients.
+        </p>
+      </div>
+      <p id="to_durian">Next,<br />we have</p>
     </section>
 
     <script src="https://unpkg.co/gsap@3/dist/gsap.min.js"></script>
