--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           packed with nutrients.
         </p>
       </div>
-      <p id="to_durian">Next,<br />we have</p>
+      <p id="to_durian">Brace<br />yourself<br />for</p>
     </section>
 
     <script src="https://unpkg.co/gsap@3/dist/gsap.min.js"></script>
