--- a/index.html
+++ b/index.html
@@ -59,6 +59,24 @@
       <p id="to_durian">Brace<br />yourself<br />for</p>
     </section>
 
+    <section id="durian">
+      <h2 id="durian_name" class="split">DURIAN</h2>
+      <div id="durian_content">
+        <img
+          src="images/pesce-huang-T2NJ74BKKIA-unsplash.jpg"
+          alt="durian"
+          id="durian_image"
+        />
+        <h3 id="durian_title" class="split">DURIAN</h3>
+        <p id="durian_des" class="split">
+          The Spiky, Daring King of fruits! Known for its bold smell and creamy
+          texture with a rich, custard-like flavor, it’s a love-it or leave-it
+          experience. Try at your own risk!
+        </p>
+      </div>
+      <p id="to_custard">Next is<br />my favorite!</p>
+    </section>
+
     <script src="https://unpkg.co/gsap@3/dist/gsap.min.js"></script>
     <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
     <script src="https://unpkg.com/split-type"></script>
