--- a/index.html
+++ b/index.html
@@ -77,6 +77,24 @@
       <p id="to_custard">Next is<br />my favorite!</p>
     </section>
 
+    <section id="custard">
+      <h2 id="custard_name" class="split">CUSTARD<br />APPLE</h2>
+      <div id="custard_content">
+        <img
+          src="images/shraddha-kulkarni-96SufxsmzAM-unsplash.jpg"
+          alt="custard apple"
+          id="custard_image"
+        />
+        <h3 id="custard_title" class="split">CUSTARD<br />APPLE</h3>
+        <p id="custard_des" class="split">
+          Beneath its green, scaly skin lies a creamy, velvety-sweet flesh that
+          tastes like a dreamy blend of vanilla and tropical goodness. It’s a
+          nature's dessert disguised as fruit!
+        </p>
+      </div>
+      <p id="to_mangosteen">Last but<br />not least</p>
+    </section>
+
     <script src="https://unpkg.co/gsap@3/dist/gsap.min.js"></script>
     <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
     <script src="https://unpkg.com/split-type"></script>
