--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
     </section>
 
     <section id="custard">
-      <h2 id="custard_name" class="split">CUSTARD<br />APPLE</h2>
+      <h2 id="custard_name" class="split">SWEETSOP</h2>
       <div id="custard_content">
         <img
           src="images/shraddha-kulkarni-96SufxsmzAM-unsplash.jpg"
-          alt="custard apple"
+          alt="sweetsop"
           id="custard_image"
         />
-        <h3 id="custard_title" class="split">CUSTARD<br />APPLE</h3>
+        <h3 id="custard_title" class="split">SWEETSOP</h3>
         <p id="custard_des" class="split">
           Beneath its green, scaly skin lies a creamy, velvety-sweet flesh that
           tastes like a dreamy blend of vanilla and tropical goodness. It’s a
