--- a/index.html
+++ b/index.html
@@ -95,6 +95,24 @@
       <p id="to_mangosteen">Last but<br />not least</p>
     </section>
 
+    <!-- <section id="mangosteen">
+      <h2 id="mangosteen_name" class="split">MANGOSTEEN</h2>
+      <div id="mangosteen_content">
+        <img
+          src="images/mangosteen-811154_1920.jpg"
+          alt="mangosteen"
+          id="mangosteen_image"
+        />
+        <h3 id="mangosteen_title" class="split">MANGOSTEEN</h3>
+        <p id="mangosteen_des" class="split">
+          The royal queen of fruits! Its juicy segments offer a perfectly
+          balanced mix of sweet and tangy, like a citrusy candy kissed by
+          tropical magic.
+        </p>
+      </div>
+      <p id="to_end">That's it!<br />Thanks!</p>
+    </section> -->
+
     <script src="https://unpkg.co/gsap@3/dist/gsap.min.js"></script>
     <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
     <script src="https://unpkg.com/split-type"></script>
