final reduce motion updates

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <p id="to_mangosteen">Last but<br />not least</p>
     </section>
 
-    <!-- <section id="mangosteen">
+    <section id="mangosteen">
       <h2 id="mangosteen_name" class="split">MANGOSTEEN</h2>
       <div id="mangosteen_content">
         <img
@@ -111,7 +111,7 @@
         </p>
       </div>
       <p id="to_end">That's it!<br />Thanks!</p>
-    </section> -->
+    </section>
 
     <script src="https://unpkg.co/gsap@3/dist/gsap.min.js"></script>
     <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
